--- a/src/components/SearchBar/SearchForm.css
+++ b/src/components/SearchBar/SearchForm.css
@@ -11,7 +11,7 @@
     justify-content: center;
     gap: 0.5rem;
     width: 100%;
-    border: 1px solid darkgray;
+    border: 1.5px solid var(--blumine);
     background-color: var(--bg-color);
     padding: 0.5rem;
     border-radius: 0.5rem;
@@ -27,13 +27,14 @@
 }
 
 .search-bar__form--passengers input {
-    flex: 0;
+    max-width: 1.5rem;
 }
 
 .search-bar__form--adults,
 .search-bar__form--children {
     display: flex;
     flex-direction: row;
+    align-items: center;
     font-weight: 300;
     font-size: 0.875rem;
     gap: 0.5rem;
