--- a/src/components/SearchBar/SearchOptions.css
+++ b/src/components/SearchBar/SearchOptions.css
@@ -1,45 +1,62 @@
 .search-bar__options {
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .search-bar__options button {
     background-color: transparent;
     border: none;
-    font-size: 1rem;
-    font-weight: 500;
+    font-size: 0.875rem;
+    font-weight: 600;
     color: var(--blumine);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: white;
     gap: 0.05rem;
-    width: 5rem;
+    width: 6rem;
     height: 4rem;
     white-space: wrap;
     opacity: 0.8;
-    will-change: opacity, transform;
-    transition: opacity 0.3s ease-out, transform 0.3s ease-out;
+    will-change: background-color, color, transform;
+    transition: background-color 0.3s ease-out, color 0.3s ease-out, transform 0.3s ease-out;
+    border: 1.5px solid var(--blumine);
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    cursor: pointer;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.search-bar__options button img {
+    flex-shrink: 0;
+    aspect-ratio: 1/1;
+    max-width: 1.5rem;
+    max-height: 1.5rem;
+    object-fit: contain;
+    transition: filter 0.3s ease-out;
 }
 
 .search-bar__options button.selected {
     opacity: 1;
-    transform: scale(1.1);
+    transform: scale(1.05);
+    background-color: var(--blumine);
+    color: white;
 }
 
-.search-bar__options button img {
-    width: 1.8rem;
-    height: 1.8rem;
-    object-fit: contain;
+.search-bar__options button.selected img {
+    filter: brightness(0) invert(1);
 }
 
 @media (min-width: 768px) {
-    .search-bar__options {
-        gap: 1rem;
+    .search-bar__options button {
+        font-size: 0.875rem;
+        width: 9rem;
+        white-space: nowrap;
     }
 
-    .search-bar__options button {
-        width: 8rem;
-        white-space: nowrap;
+    .search-bar__options button img {
+        max-width: 1.8rem;
+        max-height: 1.8rem;
     }
 }
